# sound-generator

./: Cargo.toml
.github/workflows/: build.yml
.rpm/: sound_generator.spec
src/: main.rs  wave_types.rs
wix/: main.wxs
